--- a/jogo_rapido/static/style.css
+++ b/jogo_rapido/static/style.css
@@ -43,6 +43,50 @@ body {
   padding: 0 20px;
 }
 
+.search-container {
+  text-align: center;
+  margin-top: 10%;
+}
+
+/* Estilizando o título */
+.search-container h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: #444;
+}
+
+/* Caixa de texto */
+.search-input {
+  width: 60%;
+  padding: 10px;
+  font-size: 1em;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  transition: border-color 0.3s;
+}
+
+.search-input:focus {
+  outline: none;
+  border-color: #007bff;
+}
+
+/* Botão de busca */
+.search-button {
+  padding: 10px 20px;
+  font-size: 1em;
+  color: white;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 10px;
+  transition: background-color 0.3s;
+}
+
+.search-button:hover {
+  background-color: #0056b3;
+}
+
 .logo-section {
   display: flex;
   align-items: center;
