--- a/jogo_rapido/templates/base.html
+++ b/jogo_rapido/templates/base.html
@@ -14,6 +14,15 @@
                 <img src="{% static 'logojogorapido.png' %}" alt="Logo" class="logo-img">
                 <h1 class="project-name">Jogo Rápido</h1>
             </div>
+            <div class="search-button-container">
+                <input 
+                    type="text" 
+                    placeholder="Digite sua busca..." 
+                    class="search-input" 
+                    id="searchInput">
+                <button class="search-button" onclick="performSearch()"> Buscar</button>
+            </div>
+            
             <nav class="nav-links">
                 <a href="#"><span>❤️</span> Favoritos</a>
                 <a href='/login'>👤Perfil</a>
