--- a/jogo_rapido/templates/home.html
+++ b/jogo_rapido/templates/home.html
@@ -7,7 +7,7 @@
     <h2>Quadras Disponíveis</h2>
     <div class="quadras-list">
         {% for quadra in quadrasgeral %}
-            <div class="quadra-card">
+            <div href="{% url 'detalhes_quadra' quadra.id %}"class="quadra-card">
                 <img src="{{ quadra.imagem }}" alt="Imagem da Quadra" class="quadra-img">
                 <div class="quadra-info">
                     <p><strong>Modalidade:</strong> {{ quadra.esporte }}</p>
