--- a/jogo_rapido/static/style.css
+++ b/jogo_rapido/static/style.css
@@ -1,14 +1,3 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f8e2;
-  color: #2e7d32;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
-}
 
 * {
   margin: 0;
@@ -127,17 +116,15 @@ body {
   align-items: center;
 }
 
-.quadras-container h2 {
-  color: #3a5a40;
-  margin-bottom: 20px;
-  font-size: 1.8em;
+.quadras-container {
+  flex: 1;
+  margin-right: 20px;
 }
 
 .quadras-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  display: flex;
+  flex-direction: column;
   gap: 20px;
-  width: 100%;
 }
 
 .quadra-card {
@@ -145,7 +132,7 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  text-align: center;
+  text-align: left;
 }
 
 .quadra-img {
@@ -158,13 +145,54 @@ body {
   padding: 10px;
 }
 
+.comentarios-container {
+  flex: 1;
+  background-color: #f0f4f8;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.comentarios-list {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.comentario-card {
+  background-color: #fff;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.estrelas {
+  display: flex;
+  gap: 2px;
+  margin: 5px 0;
+}
+
+.estrela {
+  color: #f39c12; /* Cor dourada */
+  font-size: 16px; /* Ajuste do tamanho da estrela */
+}
+
+.home-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
 
 .footer {
+  position: relative;
   width: 100%;
   background-color: #3a5a40;
   color: white;
   text-align: center;
-  padding: 10px 0;
+  padding: 15px 0;
 }
 
 .filter-buttons button {
@@ -301,4 +329,39 @@ body {
 
 .comentario strong {
   color: #3a5a40;
+}
+.adicionar-comentario-container {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.adicionar-comentario-container h2 {
+  color: #3a5a40;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.adicionar-comentario-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.submit-button {
+  padding: 10px 20px;
+  font-size: 1em;
+  color: white;
+  background-color: #3a5a40;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submit-button:hover {
+  background-color: #2e7d32;
 }
