--- a/jogo_rapido/templates/base.html
+++ b/jogo_rapido/templates/base.html
@@ -16,7 +16,7 @@
             </div>
             <nav class="nav-links">
                 <a href="#"><span>❤️</span> Favoritos</a>
-                <a href='/login'>👤Perfil</a>
+                <a href='{% url 'perfil' %}'>👤Perfil</a>
                 <a href="#"><span>☰</span> Menu</a>
             </nav>
         </div>
