--- a/jogo_rapido/templates/base.html
+++ b/jogo_rapido/templates/base.html
@@ -17,7 +17,7 @@
             <nav class="nav-links">
                 <a href="#"><span>❤️</span> Favoritos</a>
                 <a href='/login'>👤Perfil</a>
-                <a href="#"><span>☰</span> Menu</a>
+                <a href="/"><span>☰</span> Menu</a>
             </nav>
         </div>
     </header>
