--- a/jogo_rapido/templates/reserva.html
+++ b/jogo_rapido/templates/reserva.html
@@ -4,32 +4,38 @@
 
 {% block content %}
 <div class="reserva-container">
-    <h2>Confirmar Reserva para {{ quadra.localizacao }}</h2>
-    
+    <!-- Informações de reserva -->
     <div class="reserva-details">
+        <h2>Confirmar Reserva para {{ quadra.localizacao }}</h2>
+        
         <p><strong>Horário selecionado:</strong> {{ horario }}</p>
         <p><strong>Preço por hora:</strong> R$ {{ quadra.preco_por_hora }}</p>
+        
+        <div class="payment-methods">
+            <h3>Escolha o método de pagamento:</h3>
+            <form method="POST" action="{% url 'finalizar_reserva' quadra.id %}">
+                {% csrf_token %}
+                <div class="payment-option">
+                    <input type="radio" id="cartao" name="payment_method" value="cartao" required>
+                    <label for="cartao">Cartão de Crédito</label>
+                </div>
+                <div class="payment-option">
+                    <input type="radio" id="boleto" name="payment_method" value="boleto" required>
+                    <label for="boleto">Boleto Bancário</label>
+                </div>
+                <div class="payment-option">
+                    <input type="radio" id="pix" name="payment_method" value="pix" required>
+                    <label for="pix">PIX</label>
+                </div>
+
+                <button type="submit" class="confirmar-reserva-button">Confirmar Reserva</button>
+            </form>
+        </div>
     </div>
 
-    <div class="payment-methods">
-        <h3>Escolha o método de pagamento:</h3>
-        <form method="POST" action="{% url 'finalizar_reserva' quadra.id %}">
-            {% csrf_token %}
-            <div class="payment-option">
-                <input type="radio" id="cartao" name="payment_method" value="cartao" required>
-                <label for="cartao">Cartão de Crédito</label>
-            </div>
-            <div class="payment-option">
-                <input type="radio" id="boleto" name="payment_method" value="boleto" required>
-                <label for="boleto">Boleto Bancário</label>
-            </div>
-            <div class="payment-option">
-                <input type="radio" id="pix" name="payment_method" value="pix" required>
-                <label for="pix">PIX</label>
-            </div>
-
-            <button type="submit" class="confirmar-reserva-button">Confirmar Reserva</button>
-        </form>
+    <!-- Imagem da quadra -->
+    <div class="reserva-image-container">
+        <img src="{{ quadra.imagem.url }}" alt="Imagem da Quadra">
     </div>
 </div>
 {% endblock %}
